--- a/index.html
+++ b/index.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower point</title>
-    <link rel="stylesheet" href="styels/index.css">
+    <link rel="stylesheet" href="styels/styels.css">
 </head>
 <body>
     <header>
         <div class="banner">
             <div class="banner-content" >
-            <h1 class="banner-title" >Let's make beautiful flowers a part of your life.</h1>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <h1 class="banner-title" >Let's make <br> beautiful flowers a <br> part of your life.</h1>
+            <p> Distracted by the readable content of a page when looking at its layout. <br> The point of using Lorem Ipsum is that <br> it has a more-or-less normal distribution of letters.</p>
             <button class="btn-primary">Shop Now</button>
             </div>
             <img class="profile-pic" src="Flower Asset/pngwing 10.png" alt="">
         </div>
     </header>
+    
     <main>
-
+       <nav class="banner-2" >
+        <nav class="banner-content" >
+            <h2>Hot Deal ! Sale Up To 25% Off</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <button class="btn-primary" >Sign Up</button>
+        </nav>
+        <img class="profile-pic" src="Flower Asset/pngwing 8.png" alt="">
+       </nav>
     </main>
     <footer>
 
