--- a/index.html
+++ b/index.html
@@ -29,7 +29,33 @@
        </nav>
     </main>
     <footer>
+        <div>
+            <div class="red-city" >
+                <h2>Instagram</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            </div>
+            <img class="cover-pic" src="Flower Asset/Flower 01.png" alt="">
+            <img class="cover-pic" src="Flower Asset/Rectangle 4.png" alt="">
+            <img src="Flower Asset/Rectangle 5.png" alt="">
+            <img src="Flower Asset/Rectangle 6.png" alt="">
+        </div>
 
+        <footer class="shopping">
+            <div class="first-shopping">
+                    <h2>Get The Latest Deals</h2>
+                    <p>$30 coupon for first shopping</p>
+                    <input type="email" name="" id="email" placeholder=" Enter Your Email">
+                    <button class="btn-primary" >Subscribe</button>
+                </div>
+                <footer> 
+                    <div class="flower-shop">
+                    <h2><span class="btn-secandry" >Flower</span> <span class="btn-third" >Shop</span></h2>
+                    <p class="btn-fourth" >It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout.</p>
+
+                    <p class="btn-fiveth" >@2020-2023, FlowerShop.com. All rights reserved. </p>
+                </div>
+                </footer>
+        </footer>
     </footer>
 </body>
 </html>
