--- a/index.html
+++ b/index.html
@@ -1,61 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flower point</title>
-    <link rel="stylesheet" href="styels/styels.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styels/styels.css" />
+  </head>
+
+  <body>
     <header>
-        <div class="banner">
-            <div class="banner-content" >
-            <h1 class="banner-title" >Let's make <br> beautiful flowers a <br> part of your life.</h1>
-            <p> Distracted by the readable content of a page when looking at its layout. <br> The point of using Lorem Ipsum is that <br> it has a more-or-less normal distribution of letters.</p>
-            <button class="btn-primary">Shop Now</button>
-            </div>
-            <img class="profile-pic" src="Flower Asset/pngwing 10.png" alt="">
+      <div class="banner">
+        <div class="banner-content">
+          <h1 class="banner-title">
+            Let's make <br />
+            beautiful flowers a <br />
+            part of your life.
+          </h1>
+          <p>
+            Distracted by the readable content of a page when looking at its
+            layout. <br />
+            The point of using Lorem Ipsum is that <br />
+            it has a more-or-less normal distribution of letters.
+          </p>
+          <button class="btn-primary">Shop Now</button>
         </div>
+        <img class="profile-pic" src="Flower Asset/pngwing 10.png" alt="" />
+      </div>
     </header>
-    
+
     <main>
-       <nav class="banner-2" >
-        <nav class="banner-content" >
-            <h2>Hot Deal ! Sale Up To 25% Off</h2>
-            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
-            <button class="btn-primary" >Sign Up</button>
-        </nav>
-        <img class="profile-pic" src="Flower Asset/pngwing 8.png" alt="">
-       </nav>
-    </main>
-    <footer>
-        <div>
-            <div class="red-city" >
-                <h2>Instagram</h2>
-                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
-            </div>
-            <img class="cover-pic" src="Flower Asset/Flower 01.png" alt="">
-            <img class="cover-pic" src="Flower Asset/Rectangle 4.png" alt="">
-            <img src="Flower Asset/Rectangle 5.png" alt="">
-            <img src="Flower Asset/Rectangle 6.png" alt="">
+      <section class="benefits">
+        <div class="benefit">
+          <img src="./Flower Asset/Group 57.png" alt="icon" />
+          <p>Same Day Delivery. Click & Collect.</p>
         </div>
+        <div class="benefit">
+          <img src="./Flower Asset/Group 58.png" alt="icon" />
+          <p>Same Day Delivery. Click & Collect.</p>
+        </div>
+        <div class="benefit">
+          <img src="./Flower Asset/Group 59.png" alt="icon" />
+          <p>Same Day Delivery. Click & Collect.</p>
+        </div>
+      </section>
 
-        <footer class="shopping">
-            <div class="first-shopping">
-                    <h2>Get The Latest Deals</h2>
-                    <p>$30 coupon for first shopping</p>
-                    <input type="email" name="" id="email" placeholder=" Enter Your Email">
-                    <button class="btn-primary" >Subscribe</button>
-                </div>
-                <footer> 
-                    <div class="flower-shop">
-                    <h2><span class="btn-secandry" >Flower</span> <span class="btn-third" >Shop</span></h2>
-                    <p class="btn-fourth" >It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout.</p>
+      <section class="banner-2">
+        <div class="banner-content">
+          <h2>Hot Deal ! Sale Up To 25% Off</h2>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable <br />
+            content of a page when looking at its layout.
+          </p>
+          <button class="btn-primary">Sign Up</button>
+        </div>
+        <img class="profile-pic" src="Flower Asset/pngwing 8.png" alt="" />
+      </section>
 
-                    <p class="btn-fiveth" >@2020-2023, FlowerShop.com. All rights reserved. </p>
-                </div>
-                </footer>
-        </footer>
-    </footer>
-</body>
+      <section class="Instagram">
+        <div class="red-city">
+          <h2>Instagram</h2>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable <br />
+            
+            content of a page when looking at its layout.
+          </p>
+        </div>
+        <div class="instagram-images">
+          <img class="cover-pic" src="Flower Asset/Flower 01.png" alt="" />
+          <img class="cover-pic" src="Flower Asset/Rectangle 4.png" alt="" />
+          <img src="Flower Asset/Rectangle 5.png" alt="" />
+          <img src="Flower Asset/Rectangle 6.png" alt="" />
+        </div>
+      </section>
+      <section class="shopping">
+        <div class="first-shopping">
+          <h2>Get The Latest Deals</h2>
+          <p>$30 coupon for first shopping</p>
+          <input
+            type="email"
+            name=""
+            id="email"
+            placeholder=" Enter Your Email"
+          />
+          <button class="btn-primary">Subscribe</button>
+        </div>
+      </section>
+      <footer>
+        <div class="flower-shop">
+          <h2>
+            <span class="btn-secandry">Flower</span>
+            <span class="btn-third">Shop</span>
+          </h2>
+          <p class="btn-fourth">
+            It is a long established fact that a reader will be distracted by
+            the <br />
+            readable content of a page when looking at its layout.
+          </p>
+
+          <p class="btn-fiveth">
+            @2020-2023, FlowerShop.com. All rights reserved.
+          </p>
+        </div>
+      </footer>
+    </main>
+  </body>
 </html>
