--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
           </p>
           <button class="btn-primary">Shop Now</button>
         </div>
-        <img class="profile-pic" src="Flower Asset/pngwing 10.png" alt="" />
+        <img class="profile-pic" src="./FlowerAsset/pngwing10.png" alt="" />
       </div>
     </header>
 
     <main>
       <section class="benefits">
         <div class="benefit">
-          <img src="./Flower Asset/Group 57.png" alt="icon" />
+          <img src="./FlowerAsset/Group57.png" alt="icon" />
           <p>Same Day Delivery. Click & Collect.</p>
         </div>
         <div class="benefit">
-          <img src="./Flower Asset/Group 58.png" alt="icon" />
+          <img src="./FlowerAsset/Group58.png" alt="icon" />
           <p>Same Day Delivery. Click & Collect.</p>
         </div>
         <div class="benefit">
-          <img src="./Flower Asset/Group 59.png" alt="icon" />
+          <img src="./FlowerAsset/Group59.png" alt="icon" />
           <p>Same Day Delivery. Click & Collect.</p>
         </div>
       </section>
@@ -54,7 +54,7 @@
           </p>
           <button class="btn-primary">Sign Up</button>
         </div>
-        <img class="profile-pic" src="Flower Asset/pngwing 8.png" alt="" />
+        <img class="profile-pic" src="FlowerAsset/pngwing8.png" alt="" />
       </section>
 
       <section class="Instagram">
@@ -63,15 +63,15 @@
           <p>
             It is a long established fact that a reader will be distracted by
             the readable <br />
-            
+
             content of a page when looking at its layout.
           </p>
         </div>
         <div class="instagram-images">
-          <img class="cover-pic" src="Flower Asset/Flower 01.png" alt="" />
-          <img class="cover-pic" src="Flower Asset/Rectangle 4.png" alt="" />
-          <img src="Flower Asset/Rectangle 5.png" alt="" />
-          <img src="Flower Asset/Rectangle 6.png" alt="" />
+          <img class="cover-pic" src="FlowerAsset/Flower01.png" alt="" />
+          <img class="cover-pic" src="FlowerAsset/Rectangle4.png" alt="" />
+          <img src="FlowerAsset/Rectangle5.png" alt="" />
+          <img src="FlowerAsset/Rectangle6.png" alt="" />
         </div>
       </section>
       <section class="shopping">
